# swaycons

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE-2.0  README.md
.vim/: coc-settings.json
src/: config.toml  lib.rs  main.rs  settings.rs
