[package]
name = "swaycons"
version = "0.1.0"
authors = ["Allie Stephan <allie@pointguard.dev>"]
description = "swaycons adds nerd font icons to sway window titles"
repository = "https://github.com/actuallyallie/swaycons"
license = "MIT / Apache-2.0"
keywords = ["sway", "swaywm", "icons"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "swaycons"
path = "src/main.rs"

[dependencies]
config = "0.11.0"
regex = "1.5.4"
swayipc = "3.0.0"
xdg = "2.4.0"
